--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,41 @@
 {
-  "library": "Library"
+  "library": "Library",
+  "welcome": "Welcome in our library !",
+  "book": "Book",
+  "loan": "Loan",
+  "user": "User",
+  "home": "Home",
+  "username": "Username",
+  "password": "Password",
+  "sign": "Sign in",
+  "listLoans": "List of loans all our readers",
+  "loanLoanDate": "Loan date",
+  "loanReturnDate": "Return date",
+  "loanTerminDate": "Termin date",
+  "loanBookId": "Book id",
+  "loanUserId": "User id",
+  "loanWhatDoYouDo": "What do you want to do with loans ?",
+  "add": "Add",
+  "delete": "Delete",
+  "search": "Search",
+  "loanAddBooksLoan": "Add book's loan",
+  "loanCreateLoan": "Create loan",
+  "back": "Back",
+  "userWhatDoYouDo": "What do you want to do with users ?",
+  "userRegisterNew": "Register a new user",
+  "role": "Role",
+  "user1": "User",
+  "nameAndSurname": "Name and surname",
+  "register": "Register",
+  "bookWhatDoYouDo": "What do you want to do with books ?",
+  "bookAdd": "Add book to our library",
+  "title": "Title",
+  "author": "Author",
+  "publisher": "Publisher",
+  "publicationYear": "Publication year",
+  "availableCopies": "Available Copies",
+  "save": "Save",
+  "bookList": "List of books available in our library",
+  "available": "Available",
+  "choose": "Choose"
 }
