--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,3 +1,41 @@
 {
-  "library": "Biblioteka"
+  "library": "Biblioteka",
+  "welcome": "Witamy w naszej bibliotece !",
+  "book": "Książki",
+  "loan": "Wypożyczenia",
+  "user": "Użytkownicy",
+  "home": "Strona główna",
+  "username": "Nazwa użytkownika",
+  "password": "Hasło",
+  "sign": "Zaloguj",
+  "listLoans": "Lista wypożyczeń wszystkich czytelników",
+"loanLoanDate": "Data wypożyczenia",
+  "loanReturnDate": "Data zwrotu",
+  "loanTerminDate": "Termin oddania",
+  "loanBookId": "Id książki",
+  "loanUserId": "Id użytkownika",
+  "loanWhatDoYouDo": "Co chciałbyś zrobić z wypożyczeniami ?",
+  "add": "Dodać",
+  "delete": "Usunąć",
+  "search": "Wyświetlić",
+  "loanAddBooksLoan": "Dodaj wypożyczenie książki",
+  "loanCreateLoan": "Dodaj wypożyczenie",
+  "back": "Wróć",
+  "userWhatDoYouDo": "Co chciałbyś zrobić z użytkownikami ?",
+  "userRegisterNew": "Zarejestruj nowego użytkownika",
+  "role": "Rola użytkownika",
+  "user1": "Użytkownik",
+  "nameAndSurname": "Imię i nazwisko",
+  "register": "Zarejestruj",
+  "bookWhatDoYouDo": "Co chciałbyś zrobić z książkami ?",
+  "bookAdd": "Dodaj książkę do naszej biblioteki",
+  "title": "Tytuł",
+  "author": "Autor",
+  "publisher": "Wydawnictwo",
+  "publicationYear": "Rok wydania",
+  "availableCopies": "Dostępne kopie",
+  "save": "Zapisz",
+  "bookList": "Lista książek dostępnych w naszej bibliotece",
+  "available": "Dostępność",
+  "choose": "Wybierz"
 }
