--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,5 +37,15 @@
   "save": "Save",
   "bookList": "List of books available in our library",
   "available": "Available",
-  "choose": "Choose"
+  "choose": "Choose",
+  "loanId": "Loan id",
+  "updateReturnDate": "Enter return date",
+  "cancel": "Cancel",
+  "update": "Update",
+  "confirmDeleteTitle": "Delete a book",
+  "confirmDeleteMessage": "Are you sure you want to delete this book?",
+  "no": "No",
+  "yes": "Yes",
+  "actions": "Activity",
+  "editBook": "Updating book information"
 }
