--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,5 +47,8 @@
   "no": "No",
   "yes": "Yes",
   "actions": "Activity",
-  "editBook": "Updating book information"
+  "editBook": "Updating book information",
+  "userList": "List of all users",
+  "confirmDelete": "Delete a user",
+  "confirmDeleteMessageUser": "Are you sure you want to delete this user?"
 }
